--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
     ],
     "require": {
         "php": ">=5.4",
-        "zendframework/zendframework": "~2.3.3",
+        "zendframework/zendframework": "~2.4.0",
         "doctrine/orm": "~2.5.0",
         "doctrine/doctrine-orm-module": "~0.9.0",
         "doctrine/annotations": "^1.2.3",
@@ -56,7 +56,7 @@
         "soflomo/purifier": "~0.1.0",
         "symfony/Filesystem": "~2.6.0",
         "symfony/Finder": "~2.6.0",
-        "olcs/olcs-xmltools": "dev-develop",
+        "olcs/olcs-xmltools": "dev-feature/OLCS-16303-upgrade-zend",
         "ircmaxell/random-lib": "^1.1",
 	    "phprtflite/phprtflite": "~1.3.3",
         "simplesamlphp/saml2": "^2.2"
