OLCS-16303 updated composer file

--- a/composer.json
+++ b/composer.json
@@ -47,9 +47,9 @@
         "gedmo/doctrine-extensions": "~2.3.9",
         "ruflin/Elastica": "~5.1",
         "olcs/companies-house": "dev-develop",
-        "olcs/olcs-transfer": "dev-develop",
-        "olcs/olcs-utils": "dev-develop",
-        "olcs/olcs-logging": "dev-develop",
+        "olcs/olcs-transfer": "dev-feature/OLCS-16303-transfer-upgrade-zend",
+        "olcs/olcs-utils": "dev-feature/OLCS-16303-utils-upgrade-zend",
+        "olcs/olcs-logging": "dev-feature/OLCS-16303-logging-upgrade-zend",
         "olcs/autoload": "dev-develop",
         "zf-commons/zfc-rbac": "~2.4.0",
         "cpms/client": "~2.0",
