--- a/composer.json
+++ b/composer.json
@@ -47,16 +47,16 @@
         "gedmo/doctrine-extensions": "~2.3.9",
         "ruflin/Elastica": "~5.1",
         "olcs/companies-house": "dev-develop",
-        "olcs/olcs-transfer": "dev-feature/OLCS-16303-transfer-upgrade-zend",
-        "olcs/olcs-utils": "dev-feature/OLCS-16303-utils-upgrade-zend",
-        "olcs/olcs-logging": "dev-feature/OLCS-16303-logging-upgrade-zend",
+        "olcs/olcs-transfer": "dev-develop",
+        "olcs/olcs-utils": "dev-develop",
+        "olcs/olcs-logging": "dev-develop",
         "olcs/autoload": "dev-develop",
         "zf-commons/zfc-rbac": "~2.4.0",
         "cpms/client": "~2.0",
         "soflomo/purifier": "~0.1.0",
         "symfony/Filesystem": "~2.6.0",
         "symfony/Finder": "~2.6.0",
-        "olcs/olcs-xmltools": "dev-feature/OLCS-16303-upgrade-zend",
+        "olcs/olcs-xmltools": "dev-develop",
         "ircmaxell/random-lib": "^1.1",
 	    "phprtflite/phprtflite": "~1.3.3",
         "simplesamlphp/saml2": "^2.2"
