--- a/app/api/composer.json
+++ b/app/api/composer.json
@@ -57,10 +57,10 @@
         "symfony/Filesystem": "~2.6.0",
         "symfony/Finder": "~2.6.0",
         "olcs/olcs-xmltools": "dev-develop",
-        "ircmaxell/random-lib": "^1.1",
 	    "phprtflite/phprtflite": "~1.3.3",
         "simplesamlphp/saml2": "^2.2",
-        "ramsey/uuid": "^3.6"
+        "ramsey/uuid": "^3.6",
+        "fzaninotto/faker": "^1.6"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.8",
