--- a/app/api/composer.json
+++ b/app/api/composer.json
@@ -60,7 +60,8 @@
 	    "phprtflite/phprtflite": "~1.3.3",
         "simplesamlphp/saml2": "^3.0.0",
         "ramsey/uuid": "^3.6",
-        "fzaninotto/faker": "^1.6"
+        "fzaninotto/faker": "^1.6",
+        "phpseclib/phpseclib": "^2.0.6"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.8",
