--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,7 @@
         "olcs/olcs-logging": "dev-develop",
         "olcs/autoload": "dev-develop",
         "zf-commons/zfc-rbac": "~2.4.0",
-        "cpms/client": "~2.0",
+        "cpms/client": "dev-master",
         "soflomo/purifier": "~0.1.0",
         "symfony/Filesystem": "~2.6.0",
         "symfony/Finder": "~2.6.0",
