--- a/composer.json
+++ b/composer.json
@@ -46,17 +46,17 @@
         "doctrine/annotations": "^1.2.3",
         "gedmo/doctrine-extensions": "~2.3.9",
         "ruflin/Elastica": "~5.1",
-        "olcs/companies-house": "dev-release/4.20",
-        "olcs/olcs-transfer": "dev-release/4.20",
-        "olcs/olcs-utils": "dev-release/4.20",
-        "olcs/olcs-logging": "dev-release/4.20",
-        "olcs/autoload": "dev-release/4.20",
+        "olcs/companies-house": "dev-develop",
+        "olcs/olcs-transfer": "dev-develop",
+        "olcs/olcs-utils": "dev-develop",
+        "olcs/olcs-logging": "dev-develop",
+        "olcs/autoload": "dev-develop",
         "zf-commons/zfc-rbac": "~2.4.0",
         "cpms/client": "dev-master",
         "soflomo/purifier": "~0.1.0",
         "symfony/Filesystem": "~2.6.0",
         "symfony/Finder": "~2.6.0",
-        "olcs/olcs-xmltools": "dev-release/4.20",
+        "olcs/olcs-xmltools": "dev-develop",
 	    "phprtflite/phprtflite": "~1.3.3",
         "simplesamlphp/saml2": "^3.0.0",
         "ramsey/uuid": "^3.6",
