--- a/app/api/composer.json
+++ b/app/api/composer.json
@@ -45,6 +45,7 @@
         "doctrine/doctrine-orm-module": "~0.9.0",
         "doctrine/annotations": "^1.2.3",
         "gedmo/doctrine-extensions": "~2.3.9",
+        "oro/doctrine-extensions": "^1.2",
         "ruflin/Elastica": "~5.1",
         "olcs/companies-house": "dev-develop",
         "olcs/olcs-transfer": "dev-develop",
