--- a/composer.json
+++ b/composer.json
@@ -62,7 +62,8 @@
         "simplesamlphp/saml2": "^3.0.0",
         "ramsey/uuid": "^3.6",
         "fzaninotto/faker": "^1.6",
-        "phpseclib/phpseclib": "^2.0.6"
+        "phpseclib/phpseclib": "^2.0.6",
+        "beberlei/DoctrineExtensions": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.8",
