--- a/app/api/composer.json
+++ b/app/api/composer.json
@@ -44,6 +44,7 @@
         "doctrine/orm": "~2.5.0",
         "doctrine/doctrine-orm-module": "~0.9.0",
         "doctrine/annotations": "^1.2.3",
+        "doctrine/collections": "~1.4.0",
         "gedmo/doctrine-extensions": "~2.3.9",
         "oro/doctrine-extensions": "^1.2",
         "ruflin/Elastica": "~5.1",
