OLCS-17651 Use olcs-devtools composer dependency, which includes update to PHPUnit 5

--- a/app/api/composer.json
+++ b/app/api/composer.json
@@ -36,6 +36,10 @@
         {
             "url": "git@repo.shd.ci.nonprod.dvsa.aws:olcs/olcs-xmltools.git",
             "type": "vcs"
+        },
+        {
+            "type": "vcs",
+            "url": "git@repo.shd.ci.nonprod.dvsa.aws:olcs/olcs-devtools.git"
         }
     ],
     "require": {
@@ -67,7 +71,7 @@
         "beberlei/DoctrineExtensions": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.8",
+        "olcs/olcs-devtools": "dev-master",
         "mockery/mockery": "~0.9.3",
         "mikey179/vfsStream": "~1.4.0"
     },
@@ -91,14 +95,15 @@
         }
     },
     "config": {
+        "process-timeout" : 600,
         "preferred-install": "dist",
         "secure-http": false
     },
     "scripts": {
         "ut": "vendor/bin/phpunit -c test/phpunit.xml --stop-on-failure",
-        "review": "./Review.sh",
-        "cs": "${dev_workspace}/olcs-devtools/vendor/bin/phpcs --severity=1 --standard=${dev_workspace}/sonar-configuration/Profiles/DVSA/CS/ruleset.xml",
+        "review": "vendor/bin/review",
+        "cs": "vendor/bin/phpcs --severity=1 --standard=vendor/olcs/coding-standards/Profiles/DVSA/CS/ruleset.xml",
         "cov": "vendor/bin/phpunit -c test/phpunit-coverage.xml",
-        "update-syms": "${dev_workspace}/olcs-devtools/composer-update-syms.sh"
+        "update-syms": "vendor/bin/composer-update-syms"
     }
 }
