--- a/composer.json
+++ b/composer.json
@@ -97,7 +97,10 @@
     "config": {
         "process-timeout" : 600,
         "preferred-install": "dist",
-        "secure-http": false
+        "secure-http": false,
+        "platform" : {
+		"php":"5.6.31"
+	}
     },
     "scripts": {
         "ut": "vendor/bin/phpunit -c test/phpunit.xml --stop-on-failure",
