--- a/composer.json
+++ b/composer.json
@@ -53,7 +53,7 @@
         "oro/doctrine-extensions": "^1.2",
         "ruflin/Elastica": "~5.1",
         "olcs/companies-house": "dev-develop",
-        "olcs/olcs-transfer": "dev-project/OLCS-17250",
+        "olcs/olcs-transfer": "dev-develop",
         "olcs/olcs-utils": "dev-develop",
         "olcs/olcs-logging": "dev-develop",
         "zf-commons/zfc-rbac": "~2.4.0",
