--- a/app/api/composer.json
+++ b/app/api/composer.json
@@ -53,7 +53,7 @@
         "oro/doctrine-extensions": "^1.2",
         "ruflin/Elastica": "~5.1",
         "olcs/companies-house": "dev-release/4.30",
-        "olcs/olcs-transfer": "dev-hotfix/OLCS-18526-mitigation",
+        "olcs/olcs-transfer": "dev-release/4.30.2",
         "olcs/olcs-utils": "dev-release/4.30",
         "olcs/olcs-logging": "dev-release/4.30",
         "zf-commons/zfc-rbac": "~2.4.0",
