updated composer for olcs-coding-standards repo

--- a/app/api/composer.json
+++ b/app/api/composer.json
@@ -40,6 +40,10 @@
         {
             "type": "vcs",
             "url": "git@repo.shd.ci.nonprod.dvsa.aws:olcs/olcs-devtools.git"
+        },
+        {
+            "url": "git@repo.shd.ci.nonprod.dvsa.aws:olcs/olcs-coding-standards.git",
+            "type": "vcs"
         }
     ],
     "require": {
