--- a/app/api/composer.json
+++ b/app/api/composer.json
@@ -71,7 +71,8 @@
         "ramsey/uuid": "^3.6",
         "fzaninotto/faker": "^1.6",
         "phpseclib/phpseclib": "^2.0.6",
-        "beberlei/DoctrineExtensions": "^1.0"
+        "beberlei/DoctrineExtensions": "^1.0",
+        "qandidate/toggle": "^1.1"
     },
     "require-dev": {
         "olcs/olcs-devtools": "dev-master",
