--- a/composer.json
+++ b/composer.json
@@ -56,16 +56,16 @@
         "gedmo/doctrine-extensions": "~2.3.9",
         "oro/doctrine-extensions": "^1.2",
         "ruflin/Elastica": "~5.1",
-        "olcs/companies-house": "dev-develop",
-        "olcs/olcs-transfer": "dev-develop",
-        "olcs/olcs-utils": "dev-develop",
-        "olcs/olcs-logging": "dev-develop",
+        "olcs/companies-house": "dev-project/permits",
+        "olcs/olcs-transfer": "dev-project/permits",
+        "olcs/olcs-utils": "dev-project/permits",
+        "olcs/olcs-logging": "dev-project/permits",
         "zf-commons/zfc-rbac": "~2.4.0",
         "cpms/client": "dev-master",
         "soflomo/purifier": "~0.1.0",
         "symfony/Filesystem": "~2.6.0",
         "symfony/Finder": "~2.6.0",
-        "olcs/olcs-xmltools": "dev-develop",
+        "olcs/olcs-xmltools": "dev-project/permits",
         "phprtflite/phprtflite": "~1.3.3",
         "simplesamlphp/saml2": "^3.0.0",
         "ramsey/uuid": "^3.6",
@@ -75,7 +75,7 @@
         "qandidate/toggle": "^1.1"
     },
     "require-dev": {
-        "olcs/olcs-devtools": "dev-master",
+        "olcs/olcs-devtools": "dev-project/permits",
         "mockery/mockery": "~0.9.3",
         "mikey179/vfsStream": "~1.4.0"
     },
