--- a/app/api/composer.json
+++ b/app/api/composer.json
@@ -67,7 +67,7 @@
         "symfony/Finder": "~2.6.0",
         "olcs/olcs-xmltools": "dev-develop",
         "phprtflite/phprtflite": "~1.3.3",
-        "simplesamlphp/saml2": "^3.0.0",
+        "simplesamlphp/saml2": "3.1.6",
         "ramsey/uuid": "^3.6",
         "fzaninotto/faker": "^1.6",
         "phpseclib/phpseclib": "^2.0.6",
