ZF3 upgrade: composer point olcs dependencies to ZF3 branch

--- a/composer.json
+++ b/composer.json
@@ -57,9 +57,9 @@
         "oro/doctrine-extensions": "^1.2",
         "ruflin/Elastica": "~5.1",
         "olcs/companies-house": "dev-develop",
-        "olcs/olcs-transfer": "dev-develop",
-        "olcs/olcs-utils": "dev-develop",
-        "olcs/olcs-logging": "dev-develop",
+        "olcs/olcs-transfer": "dev-project/zf3-upgrade",
+        "olcs/olcs-utils": "dev-project/zf3-upgrade",
+        "olcs/olcs-logging": "dev-project/zf3-upgrade",
         "zf-commons/zfc-rbac": "~2.4.0",
         "cpms/client": "dev-master",
         "soflomo/purifier": "~0.1.0",
