--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,7 @@
         "php": ">=5.4",
         "zendframework/zendframework": "~3.0.0",
         "doctrine/orm": "~2.5.0",
-        "doctrine/doctrine-orm-module": "~0.9.0",
+        "doctrine/doctrine-orm-module": "^1.0.9",
         "doctrine/annotations": "^1.2.3",
         "doctrine/collections": "~1.4.0",
         "gedmo/doctrine-extensions": "~2.3.9",
