zf3-upgrade: update composer

--- a/composer.json
+++ b/composer.json
@@ -60,12 +60,11 @@
         "olcs/olcs-transfer": "dev-project/zf3-upgrade",
         "olcs/olcs-utils": "dev-project/zf3-upgrade",
         "olcs/olcs-logging": "dev-project/zf3-upgrade",
-        "zf-commons/zfc-rbac": "~2.4.0",
-        "cpms/client": "dev-master",
-        "soflomo/purifier": "~0.1.0",
+        "zf-commons/zfc-rbac": "~2.6.0",
+        "cpms/client": "dev-project/zf3-upgrade",
         "symfony/Filesystem": "~2.6.0",
         "symfony/Finder": "~2.6.0",
-        "olcs/olcs-xmltools": "dev-develop",
+        "olcs/olcs-xmltools": "dev-project/zf3-upgrade",
         "phprtflite/phprtflite": "~1.3.3",
         "simplesamlphp/saml2": "^3.0.0",
         "ramsey/uuid": "^3.6",
