--- a/composer.json
+++ b/composer.json
@@ -75,7 +75,7 @@
         "qandidate/toggle": "^1.1"
     },
     "require-dev": {
-        "olcs/olcs-devtools": "dev-develop",
+        "olcs/olcs-devtools": "dev-master",
         "mockery/mockery": "~0.9.3",
         "mikey179/vfsStream": "~1.4.0"
     },
