--- a/app/api/composer.json
+++ b/app/api/composer.json
@@ -49,6 +49,7 @@
         "symfony/finder": "^5",
         "symfony/lock": "^5",
         "twig/twig": "^2.0",
+        "laminas/laminas-authentication": "^2.5",
         "laminas/laminas-cache": "^2.5",
         "laminas/laminas-console": "^2.5",
         "laminas/laminas-eventmanager": "^2.5",
