Revert "Refactored based on feedback"
This reverts commit 057f540dc92f863fb328fb95d1b11282973386fe.

--- a/app/api/composer.json
+++ b/app/api/composer.json
@@ -94,7 +94,13 @@
             "Dvsa\\Olcs\\Snapshot\\": "module/Snapshot/src",
             "Dvsa\\Olcs\\GdsVerify\\": "module/GdsVerify/src",
             "Dvsa\\Olcs\\Queue\\": "module/Queue/src",
-            "Dvsa\\Olcs\\AwsSdk\\": "module/AwsSdk/src"
+            "Dvsa\\Olcs\\AwsSdk\\": "module/AwsSdk/src",
+            "Dvsa\\Olcs\\Auth\\": "module/Auth/src"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Dvsa\\Olcs\\Auth\\Test\\": "module/Auth/test"
         }
     },
     "config": {
