--- a/composer.json
+++ b/composer.json
@@ -94,7 +94,13 @@
             "Dvsa\\Olcs\\Snapshot\\": "module/Snapshot/src",
             "Dvsa\\Olcs\\GdsVerify\\": "module/GdsVerify/src",
             "Dvsa\\Olcs\\Queue\\": "module/Queue/src",
-            "Dvsa\\Olcs\\AwsSdk\\": "module/AwsSdk/src"
+            "Dvsa\\Olcs\\AwsSdk\\": "module/AwsSdk/src",
+            "Dvsa\\Olcs\\Auth\\": "module/Auth/src"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Dvsa\\Olcs\\Auth\\Test\\": "module/Auth/test"
         }
     },
     "config": {
