--- a/composer.json
+++ b/composer.json
@@ -21,37 +21,19 @@
     "require": {
         "php": ">=7.2",
         "ext-intl": "*",
-        "aws/aws-sdk-php": "^3.99",
+        "aws/aws-sdk-php": "^3.183",
         "beberlei/doctrineextensions": "^1.0",
         "doctrine/doctrine-orm-module": "^1.0.0",
         "doctrine/orm": "~2.6.3",
         "doctrine/persistence": "~1.3.4",
+        "dvsa/authentication-cognito": "^1.0",
+        "dvsa/contracts": "^1.0",
         "fzaninotto/faker": "^1.6",
         "gedmo/doctrine-extensions": "~2.4.39",
-        "league/flysystem": "^1.0",
-        "league/flysystem-webdav": "2.0.0",
-        "olcs/olcs-companies-house": "~4.206.0",
-        "olcs/olcs-cpms": "~4.206.0",
-        "olcs/olcs-dvla-search": "~1.0.0",
-        "olcs/olcs-logging": "~4.206.0",
-        "olcs/olcs-transfer": "~4.206.0",
-        "olcs/olcs-utils": "~4.206.0",
-        "olcs/olcs-xmltools": "~4.206.0",
-        "oro/doctrine-extensions": "^1.2",
-        "phprtflite/phprtflite": "~1.3.3",
-        "phpseclib/phpseclib": "^2.0.6",
-        "qandidate/toggle": "^1.1",
-        "ramsey/uuid": "^3.6",
-        "ruflin/elastica": "~6.1",
-        "simplesamlphp/saml2": "~3.4.2",
-        "soflomo/purifier": "^1.0",
-        "symfony/filesystem": "^5",
-        "symfony/finder": "^5",
-        "symfony/lock": "^5",
-        "twig/twig": "^2.0",
         "laminas/laminas-authentication": "^2.5",
         "laminas/laminas-cache": "^2.5",
         "laminas/laminas-console": "^2.5",
+        "laminas/laminas-dependency-plugin": "^2.0",
         "laminas/laminas-eventmanager": "^2.5",
         "laminas/laminas-filter": "^2.5",
         "laminas/laminas-http": "^2.5",
@@ -72,8 +54,28 @@
         "laminas/laminas-uri": "^2.5",
         "laminas/laminas-validator": "^2.5",
         "laminas/laminas-view": "^2.5",
+        "league/flysystem": "^1.0",
+        "league/flysystem-webdav": "2.0.0",
         "lm-commons/lmc-rbac-mvc": "^2.6",
-        "laminas/laminas-dependency-plugin": "^2.0"
+        "olcs/olcs-companies-house": "~4.206.0",
+        "olcs/olcs-cpms": "~4.206.0",
+        "olcs/olcs-dvla-search": "~1.0.0",
+        "olcs/olcs-logging": "~4.206.0",
+        "olcs/olcs-transfer": "~4.206.0",
+        "olcs/olcs-utils": "~4.206.0",
+        "olcs/olcs-xmltools": "~4.206.0",
+        "oro/doctrine-extensions": "^1.2",
+        "phprtflite/phprtflite": "~1.3.3",
+        "phpseclib/phpseclib": "^2.0.6",
+        "qandidate/toggle": "^1.1",
+        "ramsey/uuid": "^3.6",
+        "ruflin/elastica": "~6.1",
+        "simplesamlphp/saml2": "~3.4.2",
+        "soflomo/purifier": "^1.0",
+        "symfony/filesystem": "^5",
+        "symfony/finder": "^5",
+        "symfony/lock": "^5",
+        "twig/twig": "^2.0"
     },
     "require-dev": {
         "olcs/olcs-devtools": "~4.206.0",
