Revert "Refactored based on feedback"
This reverts commit 057f540dc92f863fb328fb95d1b11282973386fe.

--- a/app/api/config/autoload/local.php.dist
+++ b/app/api/config/autoload/local.php.dist
@@ -231,7 +231,7 @@ return [
         ],
     ],
 
-    'awsOptions' =>[
+    'awsOptions' => [
         'useEnvCredentials' => true,
         'region' => 'eu-west-1',
         'version'=> 'latest',
@@ -462,17 +462,23 @@ return [
         ],
     ],
     'auth' => [
-        'default_adapter' => 'cognito',
+        'default_adapter' => 'mock',
         'adapters' => [
             'cognito' => [
-                'adapter' => new \Laminas\Authentication\Adapter\Callback(function() { return true;}),
-                'timeout' => 3000,
-                'pool-arn' => 'https://ksdmfosmdfosdmnfgosmfosmgoks'
+                'adapter' => \Dvsa\Olcs\Auth\Adapter\CognitoAdapter::class,
+                'clientId' => '',
+                'clientSecret' => '',
+                'poolId' => '',
+                'region' => '',
+                'nbfLeeway' => 0,
             ],
             'azure' => [
                 'adapter' => new \Laminas\Authentication\Adapter\Callback(function() { return true;}),
                 'timeout' => 3000,
                 'pool-arn' => 'https://ksdmfosmdfosdmnfgosmfosmgoks'
+            ],
+            'mock' => [
+                'adapter' => new \Laminas\Authentication\Adapter\Callback(function() { return true;}),
             ],
         ],
     ],
