VOL-2157 add missing AWS region config

--- a/app/api/config/autoload/local.php.dist
+++ b/app/api/config/autoload/local.php.dist
@@ -481,7 +481,7 @@ return [
                 'clientId' => '',
                 'clientSecret' => '',
                 'poolId' => '',
-                'region' => '',
+                'region' => 'eu-west-1',
                 'nbfLeeway' => 0,
             ],
             'azure' => [
