VOL-2459 add missing auth->identity_provider key into sample config

--- a/app/api/config/autoload/local.php.dist
+++ b/app/api/config/autoload/local.php.dist
@@ -475,6 +475,7 @@ return [
     ],
     'auth' => [
         'default_adapter' => 'mock',
+        'identity_provider' => \Dvsa\Olcs\Api\Rbac\PidIdentityProvider::class,
         'adapters' => [
             'cognito' => [
                 'adapter' => \Dvsa\Olcs\Auth\Adapter\CognitoAdapter::class,
