--- a/app/api/config/autoload/local.php.dist
+++ b/app/api/config/autoload/local.php.dist
@@ -526,4 +526,18 @@ return [
             'timeout' => 30,
         ]
     ],
+    'govuk_account' => [
+        'discovery_endpoint' => 'https://oidc.integration.account.gov.uk/.well-known/openid-configuration',
+        'client_id' => '',
+        'keys' => [
+            'private_key' => '',
+            'public_key' => '',
+            'identity_assurance_public_key' => (array)json_decode('{"kty":"EC","use":"sig","crv":"P-256","x":"NPGA7cyIKtH1nz2CJIH14s9_CtC93NwdCQcEi-ADvxg=","y":"2cTdmHAmZjighly34lXcxEw50cbKFV7FTOdZKhOG7ps=","alg":"ES256"}'),
+        ],
+        'redirect_uri' => [
+            'logged_in' => 'https://olcs-selfserve/govuk-id/loggedin',
+            'logged_out' => 'https://olcs-selfserve/govuk-id/loggedout',
+        ],
+        'expected_core_identity_issuer' => 'identity.integration.account.gov.uk',
+    ],
 ];
